fix loader color and alignment

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -29,3 +29,10 @@
   gap: 40px;
   flex-wrap: wrap;
 }
+
+.loading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
